--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\""
+    "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
+    "dev:db": "json-server --watch db.json --port=8888"
   },
   "browserslist": {
     "production": [
@@ -42,12 +43,15 @@
     "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@types/eslint": "^8",
+    "@types/server": "^1",
     "craco-alias": "^3.0.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
-    "prettier": "^3.3.1"
+    "json-server": "^1.0.0-beta.1",
+    "prettier": "^3.3.1",
+    "server": "^1.0.39"
   }
 }
