--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.4",
+    "swiper": "^10",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "webpack-font-preload-plugin": "^1.5.0"
